--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
-    "vue-ripple-directive": "^2.0.1"
+    "vue-ripple-directive": "^2.0.1",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
