--- a/package.json
+++ b/package.json
@@ -22,35 +22,39 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "eslint": "^6.3.0",
-    "eslint-config-prettier": "^6.2.0",
+    "eslint": "^6.7.1",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-lodash-fp": "^2.2.0-a1",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-simple-import-sort": "^4.0.0",
     "eslint-plugin-vue": "^5.2.3",
-    "file-loader": "^4.2.0",
-    "husky": "^3.0.5",
-    "prettier": "^1.18.2",
-    "sass": "^1.22.10",
+    "file-loader": "^4.3.0",
+    "husky": "^3.1.0",
+    "prettier": "^1.19.1",
+    "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
     "stylelint": "^10.1.0",
-    "stylelint-config-property-sort-order-smacss": "^5.0.0",
+    "stylelint-config-property-sort-order-smacss": "^5.2.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-processor-html": "^1.0.0",
-    "stylelint-scss": "^3.10.1",
-    "url-loader": "^2.1.0",
-    "vue-loader": "^15.7.1",
+    "stylelint-scss": "^3.13.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
+    "url-loader": "^2.3.0",
+    "vue-loader": "^15.7.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.8"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
