--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "resolveJsonModule": true,
+    "target": "esnext",
     "paths": {
       "@/*": ["src/*"]
-    },
-
-    "target": "esnext",
-    "module": "esnext",
-
-    "forceConsistentCasingInFileNames": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.vue"]
 }
