--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.2.0",
@@ -36,6 +37,8 @@
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^4.2.0",
     "husky": "^3.0.5",
+    "mocha": "^7.0.0",
+    "mochapack": "^1.1.13",
     "prettier": "^1.18.2",
     "sass": "^1.22.10",
     "sass-loader": "^8.0.0",
