--- a/package.json
+++ b/package.json
@@ -27,52 +27,54 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.1",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.2",
-    "vue-property-decorator": "^8.3.0",
+    "vue": "^3.0.0-alpha.8",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.0",
     "vue-ripple-directive": "^2.0.1",
-    "vue-router": "^3.1.5"
+    "vue-router": "^4.0.0-alpha.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@types/jest": "^25.1.1",
+    "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.149",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "@vue/compiler-sfc": "^3.0.0-alpha.8",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.1",
-    "babel-eslint": "^10.0.3",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-lodash-fp": "^2.2.0-a1",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-simple-import-sort": "^5.0.1",
-    "eslint-plugin-vue": "^6.1.2",
-    "file-loader": "^5.0.2",
-    "husky": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^5.0.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "file-loader": "^5.1.0",
+    "husky": "^4.2.3",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
-    "sass": "^1.25.0",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
-    "stylelint": "^13.0.0",
-    "stylelint-config-property-sort-order-smacss": "^5.2.0",
+    "stylelint": "^13.2.1",
+    "stylelint-config-property-sort-order-smacss": "^6.0.0",
     "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-config-standard": "^19.0.0",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-processor-html": "^1.0.0",
     "stylelint-scss": "^3.14.2",
-    "ts-jest": "^25.1.0",
+    "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.3",
     "url-loader": "^3.0.0",
-    "vue-loader": "^15.8.3",
+    "vue-loader": "^16.0.0-alpha.3",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
